--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>My Ksign Repo</title>
+  <title>Neven Repo</title>
   <meta name="description" content="My custom Ksign repo." />
   <style>
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; background: #0b0f1a; color: #e8eefc; }
@@ -25,13 +25,13 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>My Ksign Repo</h1>
+      <h1>repo.nevip.lol</h1>
       <p>Use the repo link below inside Ksign.</p>
 
       <div class="btns">
         <a class="button" id="copyBtn" href="#">Copy Repo Link</a>
         <a class="button ghost" id="openJson" href="#">Open index.json</a>
-        <a class="button ghost" id="openRepo" href="#">Open GitHub Repo</a>
+        <a class="button ghost" id="openSite" href="#">Open Website</a>
       </div>
 
       <p class="small">
@@ -45,15 +45,14 @@
   </div>
 
   <script>
-    // Set these:
-    const USERNAME = "USERNAME";
-    const REPO = "REPO";
+    // ✅ Your custom domain (no trailing slash)
+    const BASE = "https://repo.nevip.lol";
 
-    const repoUrl = `https://${USERNAME}.github.io/${REPO}/index.json`;
+    const repoUrl = `${BASE}/index.json`;
     document.getElementById("repoUrl").textContent = repoUrl;
 
     document.getElementById("openJson").href = repoUrl;
-    document.getElementById("openRepo").href = `https://github.com/${USERNAME}/${REPO}`;
+    document.getElementById("openSite").href = `${BASE}/`;
 
     document.getElementById("copyBtn").addEventListener("click", async (e) => {
       e.preventDefault();
